--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,30 @@
-# Kitobxon - Dependencies
+# Node modules
 node_modules/
 
-# Environment
+# Environment variables
 .env
 .env.local
 .env.production
+.env.production.local
 
 # Database
 *.db
 *.db-shm
 *.db-wal
 
-# Build
-dist/
-build/
+# Uploads
+backend/uploads/library/*.pdf
 
-# OS
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Logs
-*.log
-npm-debug.log*
+# Build output
+frontend/dist/
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
 
-# Misc
-.gemini/
+# OS
+.DS_Store
+Thumbs.db
+
+# Debug
+debug_auth.js
