--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,8 @@
+# Render.com uchun environment variables
+# Bu qiymatlarni Render dashboard > Environment dan kiriting
+
 PORT=5000
-JWT_SECRET=CHANGE_THIS_TO_A_STRONG_SECRET_KEY
+JWT_SECRET=your_secure_jwt_secret_key_here
 JWT_EXPIRES_IN=7d
-NODE_ENV=development
+NODE_ENV=production
+FRONTEND_URL=https://your-frontend.vercel.app
